envoy/front_envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
      protocol: TCP
static_resources:
  clusters:
  - connect_timeout: 5s
    hosts:
      socket_address:
        address: 172.16.192.21
        port_value: 8080
    lb_policy: round_robin
    name: main
    type: strict_dns
  - connect_timeout: 5s
    hosts:
      socket_address:
        address: 172.16.192.20
        port_value: 9411
    lb_policy: round_robin
    name: jaeger
    type: strict_dns
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          generate_request_id: true
          http_filters:
          - name: envoy.router
            typed_config: {}
          route_config:
            name: main_route
            virtual_hosts:
            - domains: '*'
              name: default
              routes:
              - decorator:
                  operation: front-balancing
                match:
                  prefix: /
                route:
                  cluster: main
          stat_prefix: ingress_http
          tracing: {}
    name: front_listener
tracing:
  http:
    name: envoy.zipkin
    typed_config:
      '@type': type.googleapis.com/envoy.config.trace.v2.ZipkinConfig
      collector_cluster: jaeger
      collector_endpoint: /api/v2/spans
      collector_endpoint_version: HTTP_JSON
      shared_span_context: false
